(chore) parent view link links to our prototype

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -164,7 +164,7 @@
                 <a class="app-c-topic-list__link app-c-topic-list__link--no-underline brand__color" href="https://www.gov.uk/schools-colleges-childrens-services/inspections">Inspection guidance, handbooks and frameworks</a>
               </li>
               <li class="app-c-topic-list__item">
-                <a class="app-c-topic-list__link app-c-topic-list__link--no-underline brand__color" href="https://parentview.ofsted.gov.uk/">Parent View: what do you think about your child’s school?</a>
+                <a class="app-c-topic-list__link app-c-topic-list__link--no-underline brand__color" href="/parent-view">Parent View: what do you think about your child’s school?</a>
               </li>
               <li class="app-c-topic-list__item">
                 <a class="app-c-topic-list__link app-c-topic-list__link--no-underline brand__color" href="https://www.gov.uk/guidance/childminders-and-childcare-providers-register-with-ofsted">Become a childminder or childcare provider</a>
