(fix) remove hrefs from fake ofsted breadcrumbs

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -123,13 +123,13 @@
     <div class="gem-c-breadcrumbs govuk-breadcrumbs " data-module="track-click">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item" aria-current="false">
-          <a data-track-category="homeLinkClicked" data-track-action="homeBreadcrumb" data-track-label="" data-track-options="{}" class="govuk-breadcrumbs__link" aria-current="false" href="/">Home</a>
+          <a data-track-category="homeLinkClicked" data-track-action="homeBreadcrumb" data-track-label="" data-track-options="{}" class="govuk-breadcrumbs__link" aria-current="false" href="#">Home</a>
         </li>
         <li class="govuk-breadcrumbs__list-item" aria-current="false">
-          <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="/government/organisations" data-track-options='{"dimension28":"3","dimension29":"Organisations"}' class="govuk-breadcrumbs__link" aria-current="false" href="/government/organisations">Organisations</a>
+          <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="/government/organisations" data-track-options='{"dimension28":"3","dimension29":"Organisations"}' class="govuk-breadcrumbs__link" aria-current="false" href="#">Organisations</a>
         </li>
         <li class="govuk-breadcrumbs__list-item" aria-current="page">
-          <a data-track-category="breadcrumbClicked" data-track-action="3" data-track-label="#content" data-track-options='{"dimension28":"3","dimension29":"Ofsted"}' class="govuk-breadcrumbs__link" aria-current="page" href="#content">Ofsted</a>
+          <a data-track-category="breadcrumbClicked" data-track-action="3" data-track-label="#content" data-track-options='{"dimension28":"3","dimension29":"Ofsted"}' class="govuk-breadcrumbs__link" aria-current="page" href="/">Ofsted</a>
         </li>
       </ol>
     </div>
@@ -1429,7 +1429,6 @@
         <hr>
       </div>
 
-
       <div class="footer-meta">
         <div class="footer-meta-inner">
           <h2 class="visuallyhidden">Support links</h2>
@@ -1442,8 +1441,6 @@
             <li>Built by the <a href="https://www.gov.uk/government/organisations/government-digital-service">Government Digital Service</a>
             </li>
           </ul>
-
-
 
           <div class="open-government-licence">
             <p class="logo"><a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a></p>
@@ -1466,57 +1463,11 @@
   <script src="https://assets.publishing.service.gov.uk/static/header-footer-only-7a5bda7312bf32b4853efba1e84a6f1d3b14733f3f3764f4c2417d404ffa98b6.js" crossorigin="anonymous" integrity="sha256-elvacxK/MrSFPvuh6EpvHTsUcz8/N2T0wkF9QE/6mLY="></script>
   <script src="https://assets.publishing.service.gov.uk/static/surveys-aa62a918e4ca5556952181078873b85ecd52ca15c6e54f77afbb9712d098f7d0.js" crossorigin="anonymous" integrity="sha256-qmKpGOTKVVaVIYEHiHO4Xs1SyhXG5U93r7uXEtCY99A="></script>
 
-
-
   <script>
   if (typeof window.GOVUK === 'undefined') document.body.className = document.body.className.replace('js-enabled', '');
   </script>
   <script src="https://assets.publishing.service.gov.uk/collections/application-bd62369c13792ea2ae2a72729e112e5ccac4c6b6ad24924a05247240f267c174.js"></script>
-  <script type="application/ld+json">
-  {
-    "@context": "http://schema.org",
-    "@type": "BreadcrumbList",
-    "itemListElement": [{
-      "@type": "ListItem",
-      "position": 1,
-      "item": {
-        "name": "Home",
-        "@id": "https://www.gov.uk/"
-      }
-    }, {
-      "@type": "ListItem",
-      "position": 2,
-      "item": {
-        "name": "Organisations",
-        "@id": "https://www.gov.uk/government/organisations"
-      }
-    }, {
-      "@type": "ListItem",
-      "position": 3,
-      "item": {
-        "name": "Ofsted",
-        "@id": "https://www.gov.uk/government/organisations/ofsted"
-      }
-    }]
-  }
-  </script>
-  <script type="application/ld+json">
-  {
-    "@context": "http://schema.org",
-    "@type": "GovernmentOrganization",
-    "mainEntityOfPage": {
-      "@type": "WebPage",
-      "@id": "https://www.gov.uk/government/organisations/ofsted"
-    },
-    "name": "Ofsted",
-    "description": "Ofsted is the Office for Standards in Education, Children’s Services and Skills. We inspect and regulate services that care for children and young people, and services providing education and skills for learners of all ages. Ofsted is a non-ministerial department.",
-    "parentOrganization": [{
-      "@context": "http://schema.org",
-      "@type": "GovernmentOrganization",
-      "sameAs": "https://www.gov.uk/government/organisations/department-for-education"
-    }]
-  }
-  </script>
+
 </body>
 
 </html>
