(chore) add start link to flow to index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,4 +6,7 @@
 
 {% block content %}
   <h1 class="govuk-heading-xl">Parent View alpha</h1>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/leave-feedback/start">"Parent leaves feedback flow"</a></li>
+  </ul>
 {% endblock %}
