(chore) text changes to start page

--- a/app/views/leave-feedback/start.html
+++ b/app/views/leave-feedback/start.html
@@ -40,11 +40,7 @@ Parent View
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Give feedback to schools</h1>
 
-    <p class="govuk-body">Use this service to:</p>
-
-    <ul class="govuk-list govuk-list--bullet">
-      <li>tell Ofsted what you think about your child’s school</li>
-    </ul>
+    <p class="govuk-body">Use this service to tell Ofsted what you think about your child’s school.</p>
 
     <p class="govuk-body">By giving feedback you are helping schools to raise their standards plus parents and carers to make more informed choices about where to send their children.</p>
 
@@ -76,25 +72,18 @@ Parent View
 
     <aside class="app-related-items" role="complementary">
       <h2 class="govuk-heading-m" id="subsection-title">
-          Subsection
+          Related links
         </h2>
       <nav role="navigation" aria-labelledby="subsection-title">
         <ul class="govuk-list govuk-!-font-size-16">
           <li>
-            <a class="govuk-link" href="#">
-                Related link
-              </a>
+            <a href="https://www.gov.uk/complain-about-school">Make a complaint about your school</a>
           </li>
-          <li>
-            <a class="govuk-link" href="#">
-                Related link
-              </a>
-          </li>
-          <li>
+          <!-- <li>
             <a href="#" class="govuk-link govuk-!-font-weight-bold">
                 More <span class="govuk-visually-hidden">in Subsection</span>
               </a>
-          </li>
+          </li> -->
         </ul>
       </nav>
     </aside>
