--- a/app/views/leave-feedback/questions/question.html
+++ b/app/views/leave-feedback/questions/question.html
@@ -2,6 +2,7 @@
 
 {% from "radios/macro.njk" import govukRadios %}
 {% from "button/macro.njk" import govukButton %}
+{% from "back-link/macro.njk" import govukBackLink %}
 
 {% block pageTitle %}
 My child feels safe at this school — Give feedback to schools
@@ -14,6 +15,11 @@ My child feels safe at this school — Give feedback to schools
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
+
+    {{ govukBackLink({
+      text: "Back",
+      href: lastQuestion
+    }) }}
 
     <span class="govuk-caption-xl">Give feedback to schools</span>
 
