--- a/app/views/leave-feedback/questions/question.html
+++ b/app/views/leave-feedback/questions/question.html
@@ -11,6 +11,14 @@ My child feels safe at this school — Give feedback to schools
 {% block beforeContent %}
 {% endblock %}
 
+{% macro surveyPager() %}
+{% if nextQuestion <= questionCount %}
+  {{nextQuestion}}
+{% else %}
+  "/leave-feedback/summary"
+{% endif %}
+{% endmacro %}
+
 {% block content %}
 
 <div class="govuk-grid-row">
@@ -23,7 +31,7 @@ My child feels safe at this school — Give feedback to schools
 
     <span class="govuk-caption-xl">Give feedback to schools</span>
 
-    <form action={{nextQuestion}} method="post" class="form">
+    <form action={{surveyPager()}} method="post" class="form">
 
       {{ govukRadios({
         idPrefix: sanitisedQuestionText,
