(feature) user can change an answer from CYA page
When a user has edited their answer to a question, the ‘Continue’ button should return them to the check answers page

--- a/app/views/leave-feedback/questions/question.html
+++ b/app/views/leave-feedback/questions/question.html
@@ -12,7 +12,9 @@ My child feels safe at this school — Give feedback to schools
 {% endblock %}
 
 {% macro surveyPager() %}
-{% if nextQuestion <= questionCount %}
+{% if editing %}
+  "/leave-feedback/check-your-answers"
+{% elseif nextQuestion <= questionCount %}
   {{nextQuestion}}
 {% else %}
   "/leave-feedback/check-your-answers"
