(chore) continue button text has context

--- a/app/views/leave-feedback/questions/question.html
+++ b/app/views/leave-feedback/questions/question.html
@@ -87,9 +87,15 @@ in which case they're returned to the check your answers page #}
         ]
       }) }}
 
+    {% if editing %}
+      {{ govukButton({
+        text: "Save your changes"
+      }) }}
+    {% else %}
       {{ govukButton({
         text: "Continue"
       }) }}
+    {% endif %}
 
     </form>
 
