--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -53,8 +53,9 @@
       <input type="hidden" name="answers-checked" value="true">
 
       {{ govukButton({
-          text: "Accept and submit"
-        }) }}
+        text: "Accept and send",
+        href: "confirmation"
+      }) }}
 
     </form>
 
