--- a/app/views/leave-feedback/questions/question.html
+++ b/app/views/leave-feedback/questions/question.html
@@ -15,7 +15,7 @@ My child feels safe at this school — Give feedback to schools
 {% if nextQuestion <= questionCount %}
   {{nextQuestion}}
 {% else %}
-  "/leave-feedback/summary"
+  "/leave-feedback/check-your-answers"
 {% endif %}
 {% endmacro %}
 
