--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -1,20 +1,13 @@
-{# <p>{{ data | dump }}</p> #}
-
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Example - Passing data
+  Check your answers — Give feedback to schools
 {% endblock %}
 
-{% from "back-link/macro.njk" import govukBackLink %}
 {% from "summary-list/macro.njk" import govukSummaryList %}
 {% from "button/macro.njk" import govukButton %}
 
 {% block beforeContent %}
-{{ govukBackLink({
-    text: "Back",
-    href: "#"
-  }) }}
 {% endblock %}
 
 {% block content %}
@@ -42,6 +35,24 @@
         </dd>
       </div>
       {% endfor %}
+    </dl>
+
+    <h2 class="govuk-heading-m">Your additional feedback</h2>
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
+      <div class="govuk-summary-list__row">
+        <div class="govuk-summary-list__value">
+          {{ data["additional-feedback"] }}
+        </div>
+        <div class="govuk-summary-list__actions">
+          <a class="govuk-link" href="additional-feedback?edit=true">
+            Change
+            <span class="govuk-visually-hidden"> name</span>
+          </a>
+        </div>
+      </div>
+
     </dl>
 
     <h2 class="govuk-heading-m">Now send your feedback</h2>
