--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -55,11 +55,13 @@
 
     </dl>
 
-    <h2 class="govuk-heading-m">Now send your feedback</h2>
+    <h2 class="govuk-heading-m">Send your feedback</h2>
 
-    <p class="govuk-body todo">Need some text in here?</p>
+    <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and the school.
 
-    <form action="/form-handler" method="post" novalidate>
+    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing and using your responses in reports.
+
+    <form action="#" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
