--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -19,13 +19,13 @@
     <h2 class="govuk-heading-m">Your answers</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-      {% for q in questions.data %}
+      {% for question in questions.data %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          {{ q.text }}
+          {{ question.text }}
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data[sanitiseText(q.text)] }}
+          {{ data[sanitise(question.text)] }}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="/leave-feedback/questions/{{ loop.index }}?edit=true">
