(chore) updates start page copy
Google Docs: https://docs.google.com/document/d/19TrzXa9XA_7kL1pEab0aD6IvXoppVmKjeIppkCNVqec/edit#

Trello: https://trello.com/c/XI3tlRE3/193-parent-give-my-feedback-understand-service-and-start-survey

--- a/app/views/leave-feedback/start.html
+++ b/app/views/leave-feedback/start.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Parent View
+Give feedback to a school
 {% endblock %}
 
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
@@ -29,7 +29,7 @@ Parent View
       href: "/"
       },
       {
-      text: "Parent View"
+      text: "Give feedback to a school"
       }
     ]
   }) }}
@@ -38,21 +38,18 @@ Parent View
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Give feedback to schools</h1>
 
-    <p class="govuk-body">Use this service to tell Ofsted what you think about your child’s school.</p>
+    <h1 class="govuk-heading-xl">Give feedback to a school</h1>
 
-    <p class="govuk-body">By giving feedback you are helping schools to raise their standards plus parents and carers to make more informed choices about where to send their children.</p>
+    <p class="govuk-body">Use this service to tell Ofsted what you, as a parent or carer, think about your child’s school.</p>
 
-    <p class="govuk-body">All feedback is anonymised and will be read by an Ofsted inspector to help them build a picture of the school.</p>
+    <p class="govuk-body">This service is only for giving feedback about schools. If you have other concerns you can contact the school directly or get in touch with your local authority.</p>
 
-    <p class="govuk-body">Ofsted also uses this information to make decisions about which schools to inspect and when.</p>
+    <p class="govuk-body">There are a maximum of 15 questions in the feedback survey and it should take around 15 minutes to complete. You will be able to fill in the survey again if you have more than one child.</p>
 
-    <p class="govuk-body">By giving feedback you consent to your responses being made available to Ofsted.</p>
+    <p class="govuk-body">By giving feedback you are helping schools raise standards. It also helps parents and carers make more informed choices about where to send their children.</p>
 
-    <p class="govuk-body">This service is just for feedback about schools. There is a different service to <a href="https://www.gov.uk/complain-about-school">make a complaint about your school</a> or get in touch with the school directly if you have other concerns.</p>
-
-    <p class="govuk-body">Completing the feedback survey should take around X minutes.</p>
+    <p class="govuk-body">All feedback is anonymised and will be read by an Ofsted inspector to help them understand what a school is like. Ofsted also uses this information to make decisions about which schools to inspect and when. By giving feedback you give your consent to Ofsted seeing your responses.</p>
 
     {{ govukButton({
         text: "Start now",
@@ -77,7 +74,7 @@ Parent View
       <nav role="navigation" aria-labelledby="subsection-title">
         <ul class="govuk-list govuk-!-font-size-16">
           <li>
-            <a href="https://www.gov.uk/complain-about-school">Make a complaint about your school</a>
+            <a href="https://www.gov.uk/complain-about-school">Complain about a school</a>
           </li>
           <!-- <li>
             <a href="#" class="govuk-link govuk-!-font-weight-bold">
