(chore) better commenting and naming in routes.js
commit ab5f76d826cccd2d1388a66b1a498ffd8b384bc1
Author: Gaz Aston <gaz@dxw.com>
Date:   Wed Mar 20 10:46:41 2019 +0000

    (chore) better code comments in routes.js

commit e6ae5ef48a01814f898246d5c83a04e6dd922562
Author: Gaz Aston <gaz@dxw.com>
Date:   Wed Mar 20 10:43:05 2019 +0000

    (fix) better naming of variable

    “previousQuestion” is less ambiguous than “lastQuestion”

--- a/app/views/leave-feedback/questions/question.html
+++ b/app/views/leave-feedback/questions/question.html
@@ -39,7 +39,7 @@ in which case they're returned to the check your answers page #}
     {% else %}
       {{ govukBackLink({
         text: "Back",
-        href: lastQuestion
+        href: previousQuestion
       }) }}
     {% endif %}
 
