(fix) close <p> tags

--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -57,9 +57,9 @@
 
     <h2 class="govuk-heading-m">Send your feedback</h2>
 
-    <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and the school.
+    <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and the school.<p>
 
-    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing and using your responses in reports.
+    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing and using your responses in reports.<p>
 
     <form action="#" method="post" novalidate>
 
