--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -48,7 +48,25 @@
         <div class="govuk-summary-list__actions">
           <a class="govuk-link" href="additional-feedback?edit=true">
             Change
-            <span class="govuk-visually-hidden"> name</span>
+            <span class="govuk-visually-hidden"> addditional feedback</span>
+          </a>
+        </div>
+      </div>
+
+    </dl>
+
+    <h2 class="govuk-heading-m">Your email address</h2>
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
+      <div class="govuk-summary-list__row">
+        <div class="govuk-summary-list__value">
+          {{ data["email"] }}
+        </div>
+        <div class="govuk-summary-list__actions">
+          <a class="govuk-link" href="additional-feedback?edit=true">
+            Change
+            <span class="govuk-visually-hidden"> email address</span>
           </a>
         </div>
       </div>
@@ -57,9 +75,9 @@
 
     <h2 class="govuk-heading-m">Send your feedback</h2>
 
-    <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and the school.<p>
+    <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and the school.</p>
 
-    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing and using your responses in reports.<p>
+    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing and using your responses in reports.</p>
 
     <form action="#" method="post" novalidate>
 
