--- a/app/views/leave-feedback/confirmation.html
+++ b/app/views/leave-feedback/confirmation.html
@@ -19,7 +19,7 @@
 
     <h2 class="govuk-heading-m">What happens next</h2>
 
-    <p class="govuk-body">You’ll receive an email confirmation with a copy of your responses.</p>
+    <p class="govuk-body">You’ll receive an email confirmation to {{ data["email"] }} with a copy of your responses.</p>
 
     <p class="govuk-body">
       <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
