Changed service name and it’s mentions
Make it more clear that the feedback goes to Ofsted.

--- a/app/views/leave-feedback/confirmation.html
+++ b/app/views/leave-feedback/confirmation.html
@@ -5,7 +5,7 @@
 {% from "panel/macro.njk" import govukPanel %}
 
 {% block pageTitle %}
-  Feedback submitted — Give feedback to schools
+  Feedback submitted — Give feedback to Ofsted about a school
 {% endblock %}
 
 {% block content %}
