--- a/app/views/leave-feedback/start.html
+++ b/app/views/leave-feedback/start.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Give feedback to a school
+Give feedback to Ofsted about a school
 {% endblock %}
 
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
@@ -29,7 +29,7 @@ Give feedback to a school
       href: "/"
       },
       {
-      text: "Give feedback to a school"
+      text: "Give feedback to Ofsted about a school"
       }
     ]
   }) }}
@@ -39,7 +39,7 @@ Give feedback to a school
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Give feedback to a school</h1>
+    <h1 class="govuk-heading-xl">Give feedback to Ofsted about a school</h1>
 
     <p class="govuk-body">Use this service to tell Ofsted what you, as a parent or carer, think about your child’s school.</p>
 
