--- a/app/views/leave-feedback/additional-feedback.html
+++ b/app/views/leave-feedback/additional-feedback.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Additional feedback — Give feedback to schools
+  Additional feedback — Give feedback to Ofsted about a school
 {% endblock %}
 
 {% from "back-link/macro.njk" import govukBackLink %}
@@ -59,5 +59,3 @@
   </div>
 </div>
 {% endblock %}
-
-
