--- a/app/views/leave-feedback/questions/question.html
+++ b/app/views/leave-feedback/questions/question.html
@@ -5,7 +5,7 @@
 {% from "back-link/macro.njk" import govukBackLink %}
 
 {% block pageTitle %}
-My child feels safe at this school — Give feedback to schools
+My child feels safe at this school — Give feedback to Ofsted about a school
 {% endblock %}
 
 {% block beforeContent %}
