--- a/app/views/leave-feedback/sharing-information-consent.html
+++ b/app/views/leave-feedback/sharing-information-consent.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 
+{% from "radios/macro.njk" import govukRadios %}
 {% from "input/macro.njk" import govukInput %}
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
@@ -36,30 +37,58 @@ Consent to using your answers — Give feedback to schools
       }) }}
     {% endif %}
 
+    <h1 class="govuk-heading-l">What happens with your feedback</h1>
+
+    <p class="govuk-body">All feedback is anonymised and will be read by an Ofsted inspector to help them understand what a school is like. Ofsted also uses this information to make decisions about which schools to inspect and when.</p>
+
+    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing your responses.</p>
+
     <form action={{surveyPager()}} method="post" class="form">
 
+      {% set emailHtml %}
+        {{ govukInput({
+          id: "email",
+          name: "email",
+          type: "email",
+          value: data["email"],
+          autocomplete: "email",
+          classes: "govuk-input--width-20",
+          label: {
+            text: "Email address"
+          },
+          attributes: {
+            spellcheck: "false"
+          }
+        }) }}
+    {% endset -%}
 
-      {{ govukInput({
-        label: {
-          isPageHeading: "true",
-          text: "Email address",
-          classes: "govuk-label--xl"
-        },
-        hint: {
-          text: "If you want to receive an email with a confirmation and your answers please enter it here. We’ll only use this to send you a confirmation."
-        },
-        id: "email",
-        name: "email",
-        type: "email",
-        value: data["email"],
-        autocomplete: "email",
-        classes: "govuk-input--width-20",
-        attributes: {
-          spellcheck: "false"
+    {{ govukRadios({
+      idPrefix: "get-email-conditional",
+      name: "get-email",
+      fieldset: {
+        legend: {
+          text: "Receive confirmation by email",
+          isPageHeading: true,
+          classes: "govuk-fieldset__legend--m"
         }
-      }) }}
-
-
+      },
+      hint: {
+        text: "After you submit your answers you can choose to receive a confirmation email, and an email with your answers. "
+      },
+      items: [
+        {
+          value: "yes",
+          text: "Yes",
+          conditional: {
+            html: emailHtml
+          }
+        },
+        {
+          value: "no",
+          text: "No"
+        }
+      ]
+    }) }}
 
       {% if editing %}
         {{ govukButton({
@@ -67,7 +96,7 @@ Consent to using your answers — Give feedback to schools
         }) }}
       {% else %}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue to survey"
         }) }}
       {% endif %}
 
