(fix) Update start page content to v.2
Trello card:
https://trello.com/c/Y8HdndAY

--- a/app/views/leave-feedback/start.html
+++ b/app/views/leave-feedback/start.html
@@ -45,7 +45,7 @@ Give feedback to Ofsted about a school
 
     <p class="govuk-body">This service is only for giving feedback about schools. If you have other concerns you can contact the school directly or get in touch with your local authority.</p>
 
-    <p class="govuk-body">There are a maximum of 15 questions in the feedback survey and it should take around 15 minutes to complete. You will be able to fill in the survey again if you have more than one child.</p>
+    <p class="govuk-body">There are a maximum of 15 questions in the feedback survey and it should take around 15 minutes to complete.</p>
 
     <p class="govuk-body">By giving feedback you are helping schools raise standards. It also helps parents and carers make more informed choices about where to send their children.</p>
 
