--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Check your answers — Give feedback to Ofsted about a school
+Check your answers before sending your feedback — {{ serviceName }}
 {% endblock %}
 
 {% from "summary-list/macro.njk" import govukSummaryList %}
