--- a/app/views/leave-feedback/sharing-information-consent.html
+++ b/app/views/leave-feedback/sharing-information-consent.html
@@ -6,7 +6,7 @@
 {% from "back-link/macro.njk" import govukBackLink %}
 
 {% block pageTitle %}
-Consent to using your answers — Give feedback to schools
+What happens with your feedback — {{ serviceName }}
 {% endblock %}
 
 {% block beforeContent %}
