--- a/app/views/leave-feedback/sharing-information-consent.html
+++ b/app/views/leave-feedback/sharing-information-consent.html
@@ -81,11 +81,13 @@ What happens with your feedback — {{ serviceName }}
           text: "Yes",
           conditional: {
             html: emailHtml
-          }
+          },
+          checked: checked("get-email", "yes")
         },
         {
           value: "no",
-          text: "No"
+          text: "No",
+          checked: checked("get-email", "no")
         }
       ]
     }) }}
