(feature) adds fictional school name to the flow

--- a/app/views/leave-feedback/additional-feedback.html
+++ b/app/views/leave-feedback/additional-feedback.html
@@ -44,7 +44,7 @@ Do you have any additional feedback? — {{ serviceName }}
           classes: "govuk-label--xl"
         },
         hint: {
-          html: "<p class='govuk-hint'>You can add more detail to your answers or give feedback on any aspect of the school. It will be read by the Ofsted inspector and the school.</p> <p class='govuk-hint'>You can come back and edit your feedback at any time before you send it. There is a 1000 character limit.</p> <p class='govuk-hint'>If you do not have any additional feedback, you can continue.</p>"
+          html: "<p class='govuk-hint'>You can add more detail to your answers or give feedback on any aspect of Greenwood High School. It will be read by the Ofsted inspector and the school.</p> <p class='govuk-hint'>You can come back and edit your feedback at any time before you send it. There is a 1000 character limit.</p> <p class='govuk-hint'>If you do not have any additional feedback, you can continue.</p>"
         },
         rows: 10,
         value: data["additional-feedback"]
