--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -84,7 +84,7 @@ Check your answers before sending your feedback — {{ serviceName }}
 
     <h2 class="govuk-heading-m">Send your feedback</h2>
 
-    <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and the school.</p>
+    <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and {{ schoolName }}.</p>
 
     <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing and using your responses in reports.</p>
 
