--- a/app/views/leave-feedback/sharing-information-consent.html
+++ b/app/views/leave-feedback/sharing-information-consent.html
@@ -39,7 +39,7 @@ What happens with your feedback — {{ serviceName }}
 
     <h1 class="govuk-heading-l">What happens with your feedback</h1>
 
-    <p class="govuk-body">All feedback is anonymised and will be read by an Ofsted inspector to help them understand what a school is like. Ofsted also uses this information to make decisions about which schools to inspect and when.</p>
+    <p class="govuk-body">All feedback is anonymised and will be read by an Ofsted inspector to help them understand what {{ schoolName }} is like. Ofsted also uses this information to make decisions about which schools to inspect and when.</p>
 
     <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing your responses.</p>
 
